# SincroPG

./: README.md
.github/workflows/: rust.yml
CliPG/: Cargo.toml  Makefile  README.md
CliPG/.zed/: debug.json  settings.json  tasks.json
CliPG/packaging/arch/: PKGBUILD
CliPG/packaging/deb/: control
CliPG/packaging/rpm/: clipg.sepc  clipg.spec
CliPG/packaging/shared/: clipg.desktop
CliPG/packaging/shared/icons/gimp/: clipg.xcf  clipg_inv.xcf
CliPG/src/: cli_pg.rs  lib.rs  main.rs  pg_api.rs  pg_gui.rs  ser_pg_api.rs
CliPG/src/videojoc/: mod.rs  partida_guardada.rs
CliPG/tests/: integration_test.rs
CliPG/tests/fixtures_cli_pg/: conf.toml  conf_test.toml  dummy_conf.toml
CliPG/tests/fixtures_partida_guardada/exemples de partides guardades/: contingut_no_utf8_2.sav
CliPG/tests/fixtures_pg_api/path a videojocs/Napoleón TW HD/: save1.txt
CliPG/tests/fixtures_pg_api/path a videojocs/Total War 40k/: save2.txt
CliPG/tests/fixtures_videojoc/path a videojocs/Napoleón TW HD/: save1.txt
CliPG/tests/fixtures_videojoc/path a videojocs/Total War 40k/: save3.txt  save4.txt  save_deleted_remote.txt  save_remote_modified.txt
SerPG/: Cargo.toml  Makefile
SerPG/.zed/: tasks.json
SerPG/packaging/deb/: control
SerPG/src/: main.rs
SerPG/tests/fixtures/Napoleón TW HD/: save1.txt
