[package]
name = "CliPG"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
normalized-hash = "0.1.0"
filetime = "0.2"
env_logger = "0.11.8"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
wiremock = "0.6.5"
mockito = "1.7.2"
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"