[package]
name = "CliPG"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["persistence"] }
normalized-hash = "0.1.0"
filetime = "0.2"
env_logger = "0.11.8"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
wiremock = "0.6.5"
mockito = "1.7.2"
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
directories = "6.0.0"
toml = "1.0.1+spec-1.1.0"
clap = "4.5.60"
egui_extras = "0.34.1"
rfd = "0.17.2"
single-instance = "0.3"
