[package]
name = "SerPG"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
reqwest = { version = "0.13.2", features = ["json"] }
normalized-hash = "0.1.0"
serde_json = "1.0"